fix out of screen content

--- a/static/main.css
+++ b/static/main.css
@@ -182,8 +182,10 @@ body {
 
 .container-center-block>div {
     display: block;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
+
+    max-width: var(--main-input-width);
 
     border: var(--debug)
 }
